--- a/src/App.scss
+++ b/src/App.scss
@@ -80,7 +80,7 @@ button:hover {
   display: grid;
   grid-gap: 15px;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(50px, 200px);
+  grid-auto-rows: minmax(50px, 300px);
 }
 
 .image {
@@ -90,6 +90,7 @@ button:hover {
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) transform;
+  margin-bottom: 40px;
 }
 
 .image:hover {
